# C-_The_Tricky_Part_7_

./: C++_The_Tricky_Part_7_.sln
C++_The_Tricky_Part_7_/: C++_The_Tricky_Part_7_.vcxproj  C++_The_Tricky_Part_7_.vcxproj.filters  CMakeLists.txt  IMethods.h  IRepository.h  StudentsGroup.cpp  StudentsGroup.h  classes.pb.cc  classes.pb.h  conanbuildinfo.props  conanbuildinfo.txt
